--- a/index.html
+++ b/index.html
@@ -10,7 +10,86 @@
 </head>
 
 <body>
-    
+        <div id="wrapper">
+        <div id="container">
+            <div id="button-container">
+                <button id="add-note-btn"><i class="ri-add-line"></i></button>
+                <button id="upBtn"><i class="ri-arrow-up-line"></i></button>
+                <button id="downBtn"><i class="ri-arrow-down-line"></i></button>
+            </div>
+            <div id="card-container">
+                <!-- <div class="card">
+                    <img src="https://images.unsplash.com/photo-1529139574466-a303027c1d8b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8bW9kZWx8ZW58MHx8MHx8fDA%3D"
+                        alt="">
+                    <h4 class="card-username">Monalisa</h4>
+                    <div class="hometown-div">
+                        <span>Hometown</span>
+                        <span>Delhi</span>
+                    </div>
+                    <div class="purpose-div">
+                        <span>Purpose</span>
+                        <span>Design Project</span>
+                    </div>
+                    <div class="action-div">
+                        <button><i class="ri-phone-fill"></i> Call</button>
+                        <button>Message</button>
+                    </div>
+                </div>-->
+            </div>
+            <div id="priority-container">
+                <div class="priority-label emergency"></div>
+                <div class="priority-label important"></div>
+                <div class="priority-label urgent"></div>
+                <div class="priority-label no-rush"></div>
+            </div>
+        </div>
+        <div id="form-container">
+            <h2>New Call</h2>
+            <form id="myForm" action="">
+                <div class="form-element">
+                    <label for="imgurl">Image URL</label>
+                    <input type="text" id="imgurl" placeholder="https://imgurl.com/example-image">
+                </div>
+                <div class="form-element">
+                    <label for="fullname">Full Name</label>
+                    <input type="text" id="fullname" placeholder="Enter your full name">
+                </div>
+                <div class="form-element">
+                    <label for="hometown">Home Town</label>
+                    <input type="text" id="hometown" placeholder="Enter your home town">
+                </div>
+                <div class="form-element">
+                    <label for="purpose">Purpose</label>
+                    <input type="text" id="purpose" placeholder="e.g., Quick Appointment Note">
+                </div>
+                <h4>Category</h4>
+                <div class="category">
+                    <div>
+                        <input type="radio" name="pref" id="important">
+                        <label for="important">Important</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="pref" id="emergency">
+                        <label for="emergency">Emergency</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="pref" id="urgent">
+                        <label for="urgent">Urgent</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="pref" id="norush">
+                        <label for="norush">No Rush</label>
+                    </div>
+                </div>
+                <small id="category-error" class="error-msg" style="color:red;display:none;">
+                    Please select a category.
+                </small>
+                <br>
+                <input type="submit" value="Create New Note">
+                <button type="button" id="form-closebtn">Close</button>
+            </form>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
